Fixes extra space on top of button.

--- a/src/main/webapp/assets/css/feedStyle.css
+++ b/src/main/webapp/assets/css/feedStyle.css
@@ -234,6 +234,7 @@ select {
   margin-right: 0;
   overflow-y: auto;
   padding: 30px;
+  padding-top: 5px;
 }
 
 .post-card {
